@@ -1101,7 +1101,6 @@ static FT_Library ftLib;
 
 int
 pdf_load_native_font (const char *ps_name,
-                      const char *fam_name, const char *sty_name,
                       int layout_dir, int extend, int slant, int embolden)
 {
   const char *p;
